--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   <script src="const.js"></script>
   <script src="util.js"></script>
   <script src="class.js"></script>
-
+  <script src="constraint.js"></script>
   <script src="pbd.js"></script>
-  <script src="sketch.js"></script>
+  <!-- <script src="sketch.js"></script> -->
+  <!-- <script src="spring.js"></script> -->
+  <script src="freefall.js"></script>
 </body>
 
 </html>
