--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
   <script src="class.js"></script>
   <script src="constraint.js"></script>
   <script src="pbd.js"></script>
+  <!-- <script src="friction.js"></script> -->
+  <script src="rope.js"></script>
   <!-- <script src="sketch.js"></script> -->
   <!-- <script src="spring.js"></script> -->
   <script src="freefall.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
